Migrate to Vercel with API key auth

--- a/public/index.html
+++ b/public/index.html
@@ -272,5 +272,8 @@
     </div>
     
     <script src="app.js"></script>
+    <script>
+  window.API_KEY = "%DASHBOARD_API_KEY%";
+</script>
 </body>
 </html>
