--- a/public/index.html
+++ b/public/index.html
@@ -89,10 +89,7 @@
                 </a>
             </nav>
             <div class="p-2 lg:p-4">
-                 <button id="logout-btn" class="sidebar-link w-full flex items-center p-3 lg:px-4 rounded-lg text-slate-400 hover:bg-red-500 hover:text-white">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>
-                    <span class="ml-4 font-medium hidden lg:block">Logout</span>
-                </button>
+                 <div data-netlify-identity-button></div>
             </div>
         </aside>
 
@@ -240,9 +237,7 @@
                                         <th>Delivered</th>
                                         <th>RTO</th>
                                         <th>Cancelled</th>
-                                        <th>In-Transit</th>   <!-- Add -->
-                                        <th>Processing</th>   <!-- Add -->
-                                        <th>RTO %</th>
+                                        <th>In-Transit</th>   <th>Processing</th>   <th>RTO %</th>
                                         <th>CPO (₹)</th>
                                         <th>ROAS</th>
                                     </tr>
